# ocrFactory

./: README.md
dllFactory/: .gitignore  README.md
dllFactory/src/: CMakeLists.txt
dllFactory/src/dependencies/: CMakeLists.txt  readme.txt
dllFactory/src/include/: multi-platform.hpp
dllFactory/src/include/imageProcessing/: CImage.hpp  Package.hpp  conex.hpp  detection.hpp  main.hpp  projection.hpp  singleton.hpp  thresholding.hpp  util.hpp
dllFactory/src/src/: CMakeLists.txt
dllFactory/src/src/imageProcessing/: CMakeLists.txt  conex.cpp  detection.cpp  main.cpp  projection.cpp  singleton.cpp  thresholding.cpp  util.cpp
dllFactory/src/test/: CMakeLists.txt  main_test.cpp
dllFactory/src/test/python_modules/: index.html  start-linux.sh  start-windows.bat  test.txt  web-server.py  websocket-server.py
dllFactory/src/test/tests/: thresholding_test.cpp
neuralNetwork/: .gitignore  BestTrainingAndSaving.ipynb  cnn mnist.ipynb  cnn ocr.ipynb  loadDLL.ipynb  mlp.ipynb  model.json  readme.md  tesseract.ipynb  vgg bun.ipynb
