PROJECT(dllFactory)

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

# If the project is build as shared library.
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(
	include
)


ADD_SUBDIRECTORY(dependencies)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)
